--- a/templates/compactor/compactor-poddisruptionbudget.yaml
+++ b/templates/compactor/compactor-poddisruptionbudget.yaml
@@ -1,5 +1,9 @@
 {{- if and (gt (int .Values.compactor.replicas) 1) (.Values.compactor.podDisruptionBudget) }}
+{{- if .Capabilities.APIVersions.Has "policy/v1"}}
+apiVersion: policy/v1
+{{- else }}
 apiVersion: policy/v1beta1
+{{- end }}
 kind: PodDisruptionBudget
 metadata:
   name: {{ include "cortex.compactorFullname" . }}
