--- a/templates/querier/querier-poddisruptionbudget.yaml
+++ b/templates/querier/querier-poddisruptionbudget.yaml
@@ -1,5 +1,9 @@
 {{- if and (gt (int .Values.querier.replicas) 1) (.Values.querier.podDisruptionBudget) }}
+{{- if .Capabilities.APIVersions.Has "policy/v1"}}
+apiVersion: policy/v1
+{{- else }}
 apiVersion: policy/v1beta1
+{{- end }}
 kind: PodDisruptionBudget
 metadata:
   name: {{ include "cortex.querierFullname" . }}
