--- a/templates/table-manager/table-manager-poddisruptionbudget.yaml
+++ b/templates/table-manager/table-manager-poddisruptionbudget.yaml
@@ -1,5 +1,9 @@
 {{- if and (gt (int .Values.table_manager.replicas) 1) (.Values.table_manager.podDisruptionBudget) }}
+{{- if .Capabilities.APIVersions.Has "policy/v1"}}
+apiVersion: policy/v1
+{{- else }}
 apiVersion: policy/v1beta1
+{{- end }}
 kind: PodDisruptionBudget
 metadata:
   name: {{ include "cortex.tableManagerFullname" . }}
