--- a/templates/configs/configs-dep.yaml
+++ b/templates/configs/configs-dep.yaml
@@ -49,7 +49,7 @@ spec:
       {{- end }}
       containers:
         - name: configs
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: "{{ .Values.image.repository }}:{{ default .Chart.AppVersion .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
             - "-target=configs"
