--- a/templates/distributor/distributor-servicemonitor.yaml
+++ b/templates/distributor/distributor-servicemonitor.yaml
@@ -36,4 +36,7 @@ spec:
     metricRelabelings:
     {{- toYaml .Values.distributor.serviceMonitor.metricRelabelings | nindent 4 }}
     {{- end }}
+    {{- with .Values.distributor.serviceMonitor.extraEndpointSpec }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
 {{- end }}
