--- a/templates/ruler/ruler-servicemonitor.yaml
+++ b/templates/ruler/ruler-servicemonitor.yaml
@@ -36,4 +36,7 @@ spec:
     metricRelabelings:
     {{- toYaml .Values.ruler.serviceMonitor.metricRelabelings | nindent 4 }}
     {{- end }}
+    {{- with .Values.ruler.serviceMonitor.extraEndpointSpec }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
 {{- end }}
