--- a/templates/store-gateway/store-gateway-servicemonitor.yaml
+++ b/templates/store-gateway/store-gateway-servicemonitor.yaml
@@ -36,4 +36,7 @@ spec:
     metricRelabelings:
     {{- toYaml .Values.store_gateway.serviceMonitor.metricRelabelings | nindent 4 }}
     {{- end }}
+    {{- with .Values.store_gateway.serviceMonitor.extraEndpointSpec }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
 {{- end }}
