--- a/templates/table-manager/table-manager-servicemonitor.yaml
+++ b/templates/table-manager/table-manager-servicemonitor.yaml
@@ -36,4 +36,7 @@ spec:
     metricRelabelings:
     {{- toYaml .Values.table_manager.serviceMonitor.metricRelabelings | nindent 4 }}
     {{- end }}
+    {{- with .Values.table_manager.serviceMonitor.extraEndpointSpec }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
 {{- end }}
