--- a/values.yaml
+++ b/values.yaml
@@ -216,6 +216,8 @@ alertmanager:
     additionalLabels: {}
     relabelings: []
     metricRelabelings: []
+    # Additional endpoint configuration https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/api.md#endpoint
+    extraEndpointSpec: {}
 
   resources: {}
   #  limits:
@@ -406,6 +408,8 @@ distributor:
     additionalLabels: {}
     relabelings: []
     metricRelabelings: []
+    # Additional endpoint configuration https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/api.md#endpoint
+    extraEndpointSpec: {}
 
   resources: {}
   #  limits:
@@ -513,6 +517,8 @@ ingester:
     additionalLabels: {}
     relabelings: []
     metricRelabelings: []
+    # Additional endpoint configuration https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/api.md#endpoint
+    extraEndpointSpec: {}
 
   resources: {}
   #  limits:
@@ -683,6 +689,8 @@ ruler:
     additionalLabels: {}
     relabelings: []
     metricRelabelings: []
+    # Additional endpoint configuration https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/api.md#endpoint
+    extraEndpointSpec: {}
 
   resources: {}
   #  limits:
@@ -819,6 +827,8 @@ querier:
     additionalLabels: {}
     relabelings: []
     metricRelabelings: []
+    # Additional endpoint configuration https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/api.md#endpoint
+    extraEndpointSpec: {}
 
   resources: {}
   #  limits:
@@ -920,6 +930,8 @@ query_frontend:
     additionalLabels: {}
     relabelings: []
     metricRelabelings: []
+    # Additional endpoint configuration https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/api.md#endpoint
+    extraEndpointSpec: {}
 
   resources: {}
   #  limits:
@@ -1009,6 +1021,8 @@ table_manager:
     additionalLabels: {}
     relabelings: []
     metricRelabelings: []
+    # Additional endpoint configuration https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/api.md#endpoint
+    extraEndpointSpec: {}
 
   resources: {}
   #  limits:
@@ -1088,6 +1102,8 @@ configs:
     additionalLabels: {}
     relabelings: []
     metricRelabelings: []
+    # Additional endpoint configuration https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/api.md#endpoint
+    extraEndpointSpec: {}
 
   resources: {}
   #  limits:
@@ -1209,6 +1225,8 @@ nginx:
     additionalLabels: {}
     relabelings: []
     metricRelabelings: []
+    # Additional endpoint configuration https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/api.md#endpoint
+    extraEndpointSpec: {}
 
   resources: {}
   #  limits:
@@ -1287,6 +1305,8 @@ store_gateway:
     additionalLabels: {}
     relabelings: []
     metricRelabelings: []
+    # Additional endpoint configuration https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/api.md#endpoint
+    extraEndpointSpec: {}
 
   resources: {}
   #  limits:
@@ -1413,6 +1433,8 @@ compactor:
     additionalLabels: {}
     relabelings: []
     metricRelabelings: []
+    # Additional endpoint configuration https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/api.md#endpoint
+    extraEndpointSpec: {}
 
   resources: {}
   #  limits:
